# cpp-mcp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: mcp_logger.h  mcp_message.h  mcp_server.h
src/: CMakeLists.txt  mcp_resource.cpp  mcp_server.cpp  mcp_sse_client.cpp
test/: CMakeLists.txt  mcp_test.cpp
